HAWQ-1354. Externalized RPS heap size parameter
(this closes #1168)